fix mobile chat send button get covered

--- a/src/app/chat/chat-mobile/chat-mobile.component.css
+++ b/src/app/chat/chat-mobile/chat-mobile.component.css
@@ -22,7 +22,7 @@
   border-top:1px solid #ccc;
   padding:10px;
   /*background-color: #fff;*/
-  background-color: #DDEBF7;
+  /*background-color: #DDEBF7;*/
 }
 .chat-window-input textarea{
   width: 80%;
